# ristretto-donna

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
src/: CMakeLists.txt  ristretto-donna.c  ristretto-donna.h  ristretto-utils.h  test-ristretto.c
